<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:orientation="vertical"    android:paddingLeft="16dip"    android:paddingRight="16dip"    android:clipToPadding="false" >    <TextView        android:id="@+id/labelNewHost"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/service"        android:textAppearance="?android:attr/textAppearanceLarge" />
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="#000000" />
    <EditText        android:id="@+id/editTextName"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/padding_small"        android:ems="10"        android:hint="@string/name"        android:inputType="textPersonName" >
    </EditText>    <EditText        android:id="@+id/editTextPort"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/padding_small"        android:ems="10"        android:hint="@string/port"        android:inputType="textPersonName" >    </EditText>    <EditText        android:id="@+id/editTextPath"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/padding_small"        android:ems="10"        android:hint="@string/path"        android:inputType="textPersonName" />    <EditText        android:id="@+id/editTextNamespace"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/padding_small"        android:ems="10"        android:hint="@string/namespace"        android:inputType="textPersonName" />        <LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_margin="@dimen/padding_small" >        <Button            android:id="@+id/buttonRemoveService"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:text="@string/remove_service" />        <Button            android:id="@+id/buttonAddMethod"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:text="@string/add_method" />    </LinearLayout>
</LinearLayout>
