<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="fill_parent"    android:layout_height="wrap_content"    android:orientation="vertical"    android:paddingLeft="16dip"    android:paddingRight="16dip"    android:clipToPadding="false" >        <TextView        android:id="@+id/labelNewHost"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:text="@string/new_host"        android:textAppearance="?android:attr/textAppearanceLarge" />
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="#000000" />
    <EditText        android:id="@+id/editTextName"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/padding_small"        android:ems="10"        android:hint="@string/name"        android:inputType="textPersonName" >
    </EditText>
    <EditText        android:id="@+id/editTextIpAddress"        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_marginTop="@dimen/padding_small"        android:ems="10"        android:hint="@string/ip_address"        android:inputType="textPersonName" />    <LinearLayout        android:layout_width="fill_parent"        android:layout_height="wrap_content"        android:layout_margin="@dimen/padding_small" >        <Button            android:id="@+id/buttonCancel"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:text="@string/cancel" />        <Button            android:id="@+id/buttonAddService"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1.5"            android:text="@string/add_service" />        <Button            android:id="@+id/buttonOK"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_weight="1"            android:text="@string/ok" />    </LinearLayout>
</LinearLayout>
